Bug 44454 - [4.6 Regression] Many new failures
Summary: [4.6 Regression] Many new failures
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.6.0
: P3 normal
Target Milestone: 4.6.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-07 20:31 UTC by H.J. Lu
Modified: 2010-06-12 15:24 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2010-06-07 20:31:34 UTC
On Linux/ia32, revision 160384 gave

FAIL: g++.dg/other/static11.C (internal compiler error)
FAIL: g++.dg/other/static11.C (test for excess errors)
FAIL: gcc.c-torture/unsorted/dump-noaddr.c,  -O1   -dumpbase dump1/dump-noaddr.c -DMASK=1 -x c --param ggc-min-heapsize=1 -fdump-ipa-all -fdump-rtl-all -fdump-tree-all -fdump-noaddr (internal compiler error)
FAIL: gcc.c-torture/unsorted/dump-noaddr.c,  -O1   -dumpbase dump2/dump-noaddr.c -DMASK=2 -x c -fdump-ipa-all -fdump-rtl-all -fdump-tree-all -fdump-noaddr (internal compiler error)
FAIL: gcc.c-torture/unsorted/dump-noaddr.c,  -O2   -dumpbase dump1/dump-noaddr.c -DMASK=1 -x c --param ggc-min-heapsize=1 -fdump-ipa-all -fdump-rtl-all -fdump-tree-all -fdump-noaddr (internal compiler error)
FAIL: gcc.c-torture/unsorted/dump-noaddr.c,  -O2   -dumpbase dump2/dump-noaddr.c -DMASK=2 -x c -fdump-ipa-all -fdump-rtl-all -fdump-tree-all -fdump-noaddr (internal compiler error)
FAIL: gcc.c-torture/unsorted/dump-noaddr.c,  -O2 -flto   -dumpbase dump1/dump-noaddr.c -DMASK=1 -x c --param ggc-min-heapsize=1 -fdump-ipa-all -fdump-rtl-all -fdump-tree-all -fdump-noaddr (internal compiler error)
FAIL: gcc.c-torture/unsorted/dump-noaddr.c,  -O2 -flto   -dumpbase dump2/dump-noaddr.c -DMASK=2 -x c -fdump-ipa-all -fdump-rtl-all -fdump-tree-all -fdump-noaddr (internal compiler error)
FAIL: gcc.c-torture/unsorted/dump-noaddr.c,  -O2 -fwhopr   -dumpbase dump1/dump-noaddr.c -DMASK=1 -x c --param ggc-min-heapsize=1 -fdump-ipa-all -fdump-rtl-all -fdump-tree-all -fdump-noaddr (internal compiler error)
FAIL: gcc.c-torture/unsorted/dump-noaddr.c,  -O2 -fwhopr   -dumpbase dump2/dump-noaddr.c -DMASK=2 -x c -fdump-ipa-all -fdump-rtl-all -fdump-tree-all -fdump-noaddr (internal compiler error)
FAIL: gcc.c-torture/unsorted/dump-noaddr.c,  -O3 -fomit-frame-pointer   -dumpbase dump1/dump-noaddr.c -DMASK=1 -x c --param ggc-min-heapsize=1 -fdump-ipa-all -fdump-rtl-all -fdump-tree-all -fdump-noaddr (internal compiler error)
FAIL: gcc.c-torture/unsorted/dump-noaddr.c,  -O3 -fomit-frame-pointer   -dumpbase dump2/dump-noaddr.c -DMASK=2 -x c -fdump-ipa-all -fdump-rtl-all -fdump-tree-all -fdump-noaddr (internal compiler error)
FAIL: gcc.c-torture/unsorted/dump-noaddr.c,  -O3 -fomit-frame-pointer -funroll-all-loops -finline-functions   -dumpbase dump1/dump-noaddr.c -DMASK=1 -x c --param ggc-min-heapsize=1 -fdump-ipa-all -fdump-rtl-all -fdump-tree-all -fdump-noaddr (internal compiler error)
FAIL: gcc.c-torture/unsorted/dump-noaddr.c,  -O3 -fomit-frame-pointer -funroll-all-loops -finline-functions   -dumpbase dump2/dump-noaddr.c -DMASK=2 -x c -fdump-ipa-all -fdump-rtl-all -fdump-tree-all -fdump-noaddr (internal compiler error)
FAIL: gcc.c-torture/unsorted/dump-noaddr.c,  -O3 -fomit-frame-pointer -funroll-loops   -dumpbase dump1/dump-noaddr.c -DMASK=1 -x c --param ggc-min-heapsize=1 -fdump-ipa-all -fdump-rtl-all -fdump-tree-all -fdump-noaddr (internal compiler error)
FAIL: gcc.c-torture/unsorted/dump-noaddr.c,  -O3 -fomit-frame-pointer -funroll-loops   -dumpbase dump2/dump-noaddr.c -DMASK=2 -x c -fdump-ipa-all -fdump-rtl-all -fdump-tree-all -fdump-noaddr (internal compiler error)
FAIL: gcc.c-torture/unsorted/dump-noaddr.c,  -O3 -g   -dumpbase dump1/dump-noaddr.c -DMASK=1 -x c --param ggc-min-heapsize=1 -fdump-ipa-all -fdump-rtl-all -fdump-tree-all -fdump-noaddr (internal compiler error)
FAIL: gcc.c-torture/unsorted/dump-noaddr.c,  -O3 -g   -dumpbase dump2/dump-noaddr.c -DMASK=2 -x c -fdump-ipa-all -fdump-rtl-all -fdump-tree-all -fdump-noaddr (internal compiler error)
FAIL: gcc.c-torture/unsorted/dump-noaddr.c,  -Os   -dumpbase dump1/dump-noaddr.c -DMASK=1 -x c --param ggc-min-heapsize=1 -fdump-ipa-all -fdump-rtl-all -fdump-tree-all -fdump-noaddr (internal compiler error)
FAIL: gcc.c-torture/unsorted/dump-noaddr.c,  -Os   -dumpbase dump2/dump-noaddr.c -DMASK=2 -x c -fdump-ipa-all -fdump-rtl-all -fdump-tree-all -fdump-noaddr (internal compiler error)
FAIL: gcc.dg/20050811-1.c (internal compiler error)
FAIL: gcc.dg/20050811-1.c (test for excess errors)
FAIL: gcc.dg/pr30957-1.c (internal compiler error)
FAIL: gcc.dg/pr30957-1.c (test for excess errors)
FAIL: gcc.dg/pr30957-1.c scan-rtl-dump loop2_unroll "Expanding Accumulator"
FAIL: gcc.dg/pr35729.c (internal compiler error)
FAIL: gcc.dg/pr35729.c (test for excess errors)
FAIL: gcc.dg/sms-3.c (internal compiler error)
FAIL: gcc.dg/sms-3.c (test for excess errors)
FAIL: gcc.dg/sms-4.c (internal compiler error)
FAIL: gcc.dg/sms-4.c (test for excess errors)
FAIL: gcc.dg/sms-6.c (internal compiler error)
FAIL: gcc.dg/sms-6.c (test for excess errors)
FAIL: gcc.dg/sms-7.c (internal compiler error)
FAIL: gcc.dg/sms-7.c (test for excess errors)
FAIL: gcc.dg/var-expand1.c (internal compiler error)
FAIL: gcc.dg/var-expand1.c (test for excess errors)
FAIL: gcc.dg/var-expand1.c scan-rtl-dump loop2_unroll "Expanding Accumulator"

Revision 160380 is OK.
Comment 1 H.J. Lu 2010-06-07 21:09:44 UTC
FAIL: gcc.dg/sms-3.c (internal compiler error)
FAIL: gcc.dg/sms-3.c (test for excess errors)
FAIL: gcc.dg/sms-4.c (internal compiler error)
FAIL: gcc.dg/sms-4.c (test for excess errors)
FAIL: gcc.dg/sms-6.c (internal compiler error)
FAIL: gcc.dg/sms-6.c (test for excess errors)
FAIL: gcc.dg/sms-7.c (internal compiler error)
FAIL: gcc.dg/sms-7.c (test for excess errors)

are caused by revision 160382:

http://gcc.gnu.org/ml/gcc-cvs/2010-06/msg00295.html
Comment 2 Jan Hubicka 2010-06-07 22:38:21 UTC
The SMS failures are due to dumping.  We seem to be dumping freed obstack bitmaps from dce executed within SMS.  I will fix that, but tomorrow I am traveling, so only at evening.

Honza
Comment 3 Jan Hubicka 2010-06-07 22:48:47 UTC
Subject: Bug 44454

Author: hubicka
Date: Mon Jun  7 22:48:32 2010
New Revision: 160410

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=160410
Log:

	PR middle-end/44454
	(df_lr_top_dump, df_lr_bottom_dump): Check that in/out bitmaps
	are allocated.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/df-problems.c

Comment 4 H.J. Lu 2010-06-12 15:24:04 UTC
Fixed.