re PR middle-end/44454 (Many new failures)

PR middle-end/44454
	(df_lr_top_dump, df_lr_bottom_dump): Check that in/out bitmaps
	are allocated.

From-SVN: r160410